# cannabis-deforestation

./: .gitattributes  .gitignore  03-eurosat-classification.ipynb  CLEANUP_NOTES.md  LICENSE  README.md  calaveras-county-overview-map.qgz  improve_visualization.py  naip-cannabis-spike.ipynb  pyproject.toml  requirements.txt
.github/workflows/: blog-interactive-smoke-check.yml  deploy-blog-interactive.yml
blog-interactive/: index.html  serve.py
blog-interactive/css/: style.css
blog-interactive/data/: county_boundary.geojson
blog-interactive/js/: app.js  butte-fire.geojson  county_boundary.js  detections.geojson  parcels.geojson
cannabis-parcels/: README.md  cannabis-registry-2018-commercial-apns.csv  cannabis-registry-2018-commercial-apns.dbf  cannabis-registry-2018-commercial-apns.shp  cannabis-registry-2018-commercial-apns.shx  cannabis-registry-2018-commercial-permits-parcels.gpkg  cannabis-registry.sqlite  non-cannabis-parcels.shx  parcels.vrt
cannabis-parcels/cannabis-parcels-masked/: 10019035_20160620.json  10026014_20160620.tif  10026018_20160620.json  10026018_20160620.tif  10027019_20160620.json  10027019_20160620.tif  10027020_20160620.tif  12003015_20160620.json  12003015_20160620.tif  12006026_20160620.tif  12006028_20160620.tif  12007001_20160620.json  12007001_20160620.tif  (+353 more)
docs/: index.html
models/: README.md
notebooks/: 01-custom-raster-dataset.ipynb  02-create-cannabis-parcel-images.ipynb  03-cannabis-segmentation-torchgeo.ipynb  cannabis-segmentation-torchgeo.ipynb  create-cannabis-parcel-images.ipynb  custom-raster-dataset.ipynb
(+11 files in other folders)
