[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cannabis_deforestation"
version = "0.1.0"
description = "Analysis of cannabis cultivation's impact on deforestation using geospatial data"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchgeo",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["cannabis_deforestation"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88 
